kube-ingress.yml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-swagger
  namespace: polygon-public
  annotations:
    kubernetes.io/tls-acme: "true"
    # ingress.kubernetes.io/limit-rps: 20
    ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - www.polygon.io
      - polygon.io
      secretName: polygon-swagger-ui
  rules:
  - host: polygon.io
    http:
      paths:
      - path: /docs(/|$)(.*)
        backend:
          serviceName: ui-swagger
          servicePort: 80
  - host: www.polygon.io
    http:
      paths:
      - path: /docs(/|$)(.*)
        backend:
          serviceName: ui-swagger
          servicePort: 80
